WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
245920
CGDisplayList image cache cannot cache images between layers
https://bugs.webkit.org/show_bug.cgi?id=245920
Summary
CGDisplayList image cache cannot cache images between layers
Tim Horton
Reported
2022-09-30 18:21:55 PDT
CGDisplayList image cache cannot cache images between layers
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-09-30 18:22:10 PDT
<
rdar://problem/100336143
>
Tim Horton
Comment 2
2022-09-30 18:34:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4894
EWS
Comment 3
2024-01-19 14:35:25 PST
Committed
273240@main
(e8c0db1780a3): <
https://commits.webkit.org/273240@main
> Reviewed commits have been landed. Closing PR #4894 and removing active labels.
WebKit Commit Bot
Comment 4
2024-01-24 22:21:46 PST
Re-opened since this is blocked by
bug 268062
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug